--- a/src/lostitemproject/AddLostItemGUI.form
+++ b/src/lostitemproject/AddLostItemGUI.form
@@ -30,7 +30,7 @@
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/lostitemproject/111.png"/>
+          <Image iconType="3" name="/lostitemproject.image/111.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -273,7 +273,7 @@
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/lostitemproject/&#xe1e;&#xe37;&#xe49;&#xe19;&#xe2b;&#xe25;&#xe31;&#xe07;590.png"/>
+          <Image iconType="3" name="/lostitemproject.image/&#xe1e;&#xe37;&#xe49;&#xe19;&#xe2b;&#xe25;&#xe31;&#xe07;590.png"/>
         </Property>
       </Properties>
       <Constraints>
