--- a/src/lostitemproject/ViewLostItemGUI.form
+++ b/src/lostitemproject/ViewLostItemGUI.form
@@ -242,7 +242,7 @@
           <Font name="Tahoma" size="48" style="0"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/lostitemproject/&#xe1f;&#xe2d;&#xe19;5.png"/>
+          <Image iconType="3" name="/lostitemproject.image/&#xe1f;&#xe2d;&#xe19;5.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -254,7 +254,7 @@
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/lostitemproject/&#xe1e;&#xe37;&#xe49;&#xe19;&#xe2b;&#xe25;&#xe31;&#xe07;&#xe2b;&#xe19;&#xe49;&#xe32;&#xe2d;&#xe37;&#xe48;&#xe19;.png"/>
+          <Image iconType="3" name="/lostitemproject.image/&#xe1e;&#xe37;&#xe49;&#xe19;&#xe2b;&#xe25;&#xe31;&#xe07;&#xe2b;&#xe19;&#xe49;&#xe32;&#xe2d;&#xe37;&#xe48;&#xe19;.png"/>
         </Property>
       </Properties>
       <Constraints>
