--- a/src/lostitemproject/ViewDetailGUI.form
+++ b/src/lostitemproject/ViewDetailGUI.form
@@ -143,7 +143,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="String allLocationFound = &quot;&quot;;&#xa;for(int i=0;i&lt;focusItem.getStatus().getLocationName().size();i++){&#xa;    allLocationFound+=focusItem.getStatus().getLocationName().get(i)+&quot;,&quot;;&#xa;}&#xa;allLocationFound=allLocationFound.substring(0, allLocationFound.length()-1);&#xa;locationFound.setText(allLocationFound);"/>
+        <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="String allLocationFound = &quot;&quot;;&#xa;ItemStatus statFound=null;&#xa;if(focusItem.getStatus().getStatusName().equalsIgnoreCase(&quot;lost&quot;)){&#xa;    locationFound.setText(&quot;-&quot;);&#xa;}else{&#xa;try{&#xa;    dbm.createConnection();&#xa;    statFound = dbm.queryStatusSpecifyType(focusItem.getItemId(), 2);&#xa;    if(statFound==null){&#xa;        statFound = dbm.queryStatusSpecifyType(focusItem.getItemId(), 4);&#xa;    }&#xa;    dbm.disconnect();&#xa;&#xa;}catch(Exception e){&#xa;        e.printStackTrace();&#xa;    }&#xa;for(int i=0;i&lt;statFound.getLocationName().size();i++){&#xa;    allLocationFound+=statFound.getLocationName().get(i)+&quot;,&quot;;&#xa;}&#xa;allLocationFound=allLocationFound.substring(0, allLocationFound.length()-1);&#xa;locationFound.setText(allLocationFound);&#xa;}"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -304,7 +304,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="String allLocationLost = &quot;&quot;;&#xa;for(int i=0;i&lt;focusItem.getStatus().getLocationName().size();i++){&#xa;    allLocationLost+=focusItem.getStatus().getLocationName().get(i)+&quot;,&quot;;&#xa;}&#xa;allLocationLost=allLocationLost.substring(0, allLocationLost.length()-1);&#xa;locationLost.setText(allLocationLost);"/>
+        <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="String allLocationLost = &quot;&quot;;&#xa;ItemStatus statLost=focusItem.getStatus();&#xa;if(!statLost.getStatusName().equalsIgnoreCase(&quot;lost&quot;)){&#xa;    try{&#xa;        dbm.createConnection();&#xa;        statLost = dbm.queryStatusSpecifyType(statLost.getItemId(), 1);&#xa;        dbm.disconnect();&#xa;&#xa;    }catch(Exception e){&#xa;        e.printStackTrace();&#xa;    }&#xa;}&#xa;for(int i=0;i&lt;statLost.getLocationName().size();i++){&#xa;    allLocationLost+=statLost.getLocationName().get(i)+&quot;,&quot;;&#xa;}&#xa;allLocationLost=allLocationLost.substring(0, allLocationLost.length()-1);&#xa;locationLost.setText(allLocationLost);"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
